Add listener and detail fragment for each wine entry.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="showWineDatabaseButtonText">Wine Database</string>
     <string name="optionMenuText">Option Menu</string>
     <string name="BackToMainViewButtonText">Back to Main View</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
