--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="optionMenuText">Option Menu</string>
     <string name="BackToMainViewButtonText">Back to Main View</string>
 
+    <string name="null_name">[NO NAME]</string>
+    <string name="null_brand">[NO BRAND]</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="back_to_list">Back to List</string>
